--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,7 @@ on:
 jobs:
   test:
     strategy:
+      fail-fast: false
       matrix:
           os: [ macos-latest, windows-latest, ubuntu-18.04 ]
           java: [ adopt@1.8, adopt@1.11 ]
@@ -18,3 +19,4 @@ jobs:
           java-version: "{{ matrix.java }}"
       - name: Build and Test
         run: sbt -v -Dfile.encoding=UTF-8 +test
+        shell: bash
