--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup Scala
         uses: olafurpg/setup-scala@v13
         with:
-          java-version: "{{ matrix.java }}"
+          java-version: ${{ matrix.java }}
       - name: Build and Test
         run: sbt -v -Dfile.encoding=UTF-8 +test
         shell: bash
