Edit branches where to execute GitHub Actions

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,7 +1,10 @@
 name: pps-bunny CI
 on:
   pull_request:
+    branches: [master, develop]
   push:
+    branches: [master, develop]
+
 jobs:
   test:
     strategy:
