Scalafmt config updated and code formatted.

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -9,18 +9,14 @@ unindentTopLevelOperators = true
 indentOperator.preset = default
 
 # Alignment
-align.preset = most
 align.openParenCallSite = true
 align.openParenDefnSite = true
 align.closeParenSite = true
 
-# Braces
-includeCurlyBraceInSelectChains = true
-
 # Newlines
 newlines.penalizeSingleSelectMultiArgList = false
 newlines.topLevelStatementBlankLines = [
-  { blanks = 1 }
+  { blanks = {before = 1, after = 1} }
   { regex = "^Import" }
 ]
 newlines.beforeMultiline = fold
@@ -31,20 +27,34 @@ danglingParentheses.defnSite = false
 danglingParentheses.callSite = false
 
 # Docstring
-docstrings.style = Asterisk
-docstrings.wrap = yes
+docstrings.style = AsteriskSpace
+docstrings.wrap = no
+docstrings.removeEmpty = true
+docstrings.oneline = fold
 
 # Project
 project.git = true
-project.excludeFilters = ["target/"]
+project.excludeFilters = ["target/", ".idea/", ".bsp/"]
 
 # Rewrite
-rewrite.rules = [SortModifiers, AvoidInfix, RedundantBraces, RedundantParens, SortImports, PreferCurlyFors, Imports]
-rewrite.imports.sort = scalastyle
+rewrite.rules = [AvoidInfix, SortModifiers, RedundantBraces, RedundantParens, SortImports, PreferCurlyFors, Imports]
+rewrite.imports.sort = original
 rewrite.sortModifiers.order = [
   "implicit", "private", "sealed", "abstract", "final", "protected", "override", "lazy"
 ]
 
+rewriteTokens = {
+  "⇒": "=>"
+  "→": "->"
+  "←": "<-"
+}
+
 # Space
 spaces.inImportCurlyBraces = true
+spaces.afterSymbolicDefs=true
+
+# Other
+binPack.parentConstructors = Oneline
+optIn.breakChainOnFirstMethodDot = true
+importSelectors = binPack
 
