--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,46 +1,40 @@
-version = 3.0.4
-maxColumn = 100
+version = 3.0.0
+maxColumn = 120
+
+includeCurlyBraceInSelectChains = false
 
 # Indent
 indent.main = 2
-indent.significant = 3
-indent.caseSite = 5
-unindentTopLevelOperators = true
-indentOperator.preset = default
 
 # Alignment
-align.openParenCallSite = true
-align.openParenDefnSite = true
-align.closeParenSite = true
+align.openParenCallSite = false
+align.openParenDefnSite = false
+align.preset = some
 
 # Newlines
 newlines.penalizeSingleSelectMultiArgList = false
 newlines.topLevelStatementBlankLines = [
-  { blanks = {before = 1, after = 1} }
-  { regex = "^Import" }
+  { blanks = { before = 1, after = 1 } }
 ]
 newlines.beforeMultiline = fold
-newlines.afterCurlyLambdaParams = squash
 newlines.implicitParamListModifierPrefer = before
 newlines.avoidInResultType = true
-danglingParentheses.defnSite = false
-danglingParentheses.callSite = false
+danglingParentheses.defnSite = true
+danglingParentheses.callSite = true
 
 # Docstring
-docstrings.style = AsteriskSpace
-docstrings.wrap = no
-docstrings.removeEmpty = true
-docstrings.oneline = fold
+docstrings.style = Asterisk
+docstrings.wrap = yes
 
 # Project
 project.git = true
 project.excludeFilters = ["target/", ".idea/", ".bsp/"]
 
 # Rewrite
-rewrite.rules = [AvoidInfix, SortModifiers, RedundantBraces, RedundantParens, SortImports, PreferCurlyFors, Imports]
-rewrite.imports.sort = original
+rewrite.rules = [SortModifiers, PreferCurlyFors, Imports]
+rewrite.imports.sort = scalastyle
 rewrite.sortModifiers.order = [
-  "implicit", "private", "sealed", "abstract", "final", "protected", "override", "lazy"
+  "implicit", "private", "sealed", "abstract", "override", "final", "protected", "lazy"
 ]
 
 rewriteTokens = {
@@ -51,10 +45,7 @@ rewriteTokens = {
 
 # Space
 spaces.inImportCurlyBraces = true
-spaces.afterSymbolicDefs=true
 
 # Other
-binPack.parentConstructors = Oneline
-optIn.breakChainOnFirstMethodDot = true
+optIn.breakChainOnFirstMethodDot = false
 importSelectors = binPack
-
