--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -7,40 +7,45 @@ includeCurlyBraceInSelectChains = false
 indent.main = 2
 
 # Alignment
-align.openParenCallSite = false
-align.openParenDefnSite = false
-align.preset = some
+align {
+    openParenCallSite = false
+    openParenDefnSite = false
+    preset = some
+}
 
 # Newlines
-newlines.penalizeSingleSelectMultiArgList = false
-newlines.topLevelStatementBlankLines = [
-  { blanks = { before = 1, after = 1 } }
-]
-newlines.beforeMultiline = fold
-newlines.implicitParamListModifierPrefer = before
-newlines.avoidInResultType = true
+newlines {
+    penalizeSingleSelectMultiArgList = false
+    topLevelStatementBlankLines = [
+      { blanks = { before = 1, after = 1 } }
+    ]
+    beforeMultiline = fold
+    implicitParamListModifierPrefer = before
+    avoidInResultType = true
+    afterCurlyLambdaParams = squash
+}
 danglingParentheses.defnSite = true
 danglingParentheses.callSite = true
 
 # Docstring
-docstrings.style = Asterisk
-docstrings.wrap = yes
+docstrings {
+    style = Asterisk
+    wrap = yes
+}
 
 # Project
-project.git = true
-project.excludeFilters = ["target/", ".idea/", ".bsp/"]
+project{
+    git = true
+    excludeFilters = ["target/", ".idea/", ".bsp/"]
+}
 
 # Rewrite
-rewrite.rules = [SortModifiers, SortImports, PreferCurlyFors, Imports]
-rewrite.imports.sort = scalastyle
-rewrite.sortModifiers.order = [
-  "implicit", "private", "sealed", "abstract", "override", "final", "protected", "lazy"
-]
-
-rewriteTokens = {
-  "⇒": "=>"
-  "→": "->"
-  "←": "<-"
+rewrite {
+    rules = [SortModifiers, SortImports, PreferCurlyFors, Imports]
+    imports.sort = scalastyle
+    sortModifiers.order = [
+      "implicit", "private", "sealed", "abstract", "override", "final", "protected", "lazy"
+    ]
 }
 
 # Space
