--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,9 +1,9 @@
 name: pps-bunny CI
 on:
   pull_request:
-    branches: [master, develop]
+    branches: [main, develop]
   push:
-    branches: [master, develop]
+    branches: [main, develop]
 
 jobs:
   test:
